<resources>
    <string name="app_name">Munchies</string>
    <string name="navigation_logout">LogOut</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_profile">Profile</string>
    <string name="restaurants">Restaurants</string>
    <string name="navigation_orders">Orders</string>
    <string name="navigation_for_you">For You</string>
    <string name="nav_header_text">Munchies</string>
    <string name="login">Login</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>